<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it">Build It Bigger</string>
    <string name="bacon_reader">Bacon Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="open_app">Opens the app </string>
</resources>
