<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/label_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <Button
        android:text="@string/spotify"
        style="@style/button_apps"
        android:onClick="spotifyButton"
        />
    <Button
        android:text="@string/scores_app"
        style="@style/button_apps"
        android:onClick="scoresButton"
        />
    <Button
        android:text="@string/library_app"
        style="@style/button_apps"
        android:onClick="libraryButton"
        />
    <Button
        android:text="@string/build_it"
        style="@style/button_apps"
        android:onClick="buildItButton"
        />
    <Button
        android:text="@string/bacon_reader"
        style="@style/button_apps"
        android:onClick="baconButton"
        />
    <Button
        android:text="@string/capstone"
        style="@style/button_my_app"
        android:onClick="capstoneButton"
        />


</LinearLayout>
